--- a/practica/game/version_normal/index.html
+++ b/practica/game/version_normal/index.html
@@ -5,6 +5,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 	<title>FlapCat Christmas</title>
 	
+	<!-- Standardised web app manifest -->
+	<link rel="manifest" href="appmanifest.json" />
+	
 	<!-- Allow fullscreen mode on iOS devices. (These are Apple specific meta tags.) -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, minimal-ui" />
 	<meta name="apple-mobile-web-app-capable" content="yes" />
@@ -22,29 +25,25 @@
 			padding: 0;
 			margin: 0;
 		}
-		body {
-			background: #007162;
-			color: #d8efed;
+		html, body {
+			background: #000;
+			color: #fff;
 			overflow: hidden;
+			touch-action: none;
 			-ms-touch-action: none;
 		}
 		canvas {
+			touch-action-delay: none;
+			touch-action: none;
 			-ms-touch-action: none;
-		}
-		txt{
-			font-family: Arial, Helvetica, sans-serif;
-			font-size: 14px;
-			color:#d8efed;
-		}txt a{
-			color:#d8efed;
 		}
     </style>
 	
 
 </head> 
  
-<body onorientationchange="exibe();" onresize="exibe();" onload="exibe();">
-<div id="fb-root"></div>
+<body> 
+	<div id="fb-root"></div>
 	
 	<script>
 	// Issue a warning if trying to preview an exported project on disk.
@@ -58,11 +57,7 @@
 	</script>
 	
 	<!-- The canvas must be inside a div called c2canvasdiv -->
-	<div id="check_notice" style="display:none">
-    <img  style="display: block; margin-left: auto; margin-right: auto; margin-top: 50px;" src="img_turn.png">
-    </div>
-    <div id="check_game">
-    	<div id="c2canvasdiv">
+	<div id="c2canvasdiv">
 	
 		<!-- The canvas the project will render to.  If you change its ID, don't forget to change the
 		ID the runtime looks for in the jQuery events above (ready() and cr_sizeCanvas()). -->
@@ -70,38 +65,20 @@
 			<!-- This text is displayed if the visitor's browser does not support HTML5.
 			You can change it, but it is a good idea to link to a description of a browser
 			and provide some links to download some popular HTML5-compatible browsers. -->
-			<txt>Your browser does not appear to support HTML5.  Try upgrading your browser to the latest version.  <a href="http://www.whatbrowser.org">What is a browser?</a>
+			<h1>Your browser does not appear to support HTML5.  Try upgrading your browser to the latest version.  <a href="http://www.whatbrowser.org">What is a browser?</a>
 			<br/><br/><a href="http://www.microsoft.com/windows/internet-explorer/default.aspx">Microsoft Internet Explorer</a><br/>
 			<a href="http://www.mozilla.com/firefox/">Mozilla Firefox</a><br/>
 			<a href="http://www.google.com/chrome/">Google Chrome</a><br/>
 			<a href="http://www.apple.com/safari/download/">Apple Safari</a><br/>
 			<a href="http://www.google.com/chromeframe">Google Chrome Frame for Internet Explorer</a><br/></h1>
-            </txt>
 		</canvas>
 		
 	</div>
-</div>
-    
-    
-    <!-- script to detect window size -->
-    <script type="text/javascript">
-    function exibe() {
-		if (window.innerWidth < window.innerHeight) {
-		document.getElementById('check_notice').style.display = "inline";
-		document.getElementById('check_game').style.display = "none";
-	}
-	else {
-		document.getElementById('check_notice').style.display = "none";
-		document.getElementById('check_game').style.display = "inline";
-		}
-	}
-	</script>
-	
 	
 	<!-- Pages load faster with scripts at the bottom -->
 	
 	<!-- Construct 2 exported games require jQuery. -->
-	<script src="jquery-2.0.0.min.js"></script>
+	<script src="jquery-2.1.1.min.js"></script>
 
 
 	
@@ -135,6 +112,11 @@
 		document.addEventListener("webkitvisibilitychange", onVisibilityChanged, false);
 		document.addEventListener("msvisibilitychange", onVisibilityChanged, false);
 		
+		if (navigator.serviceWorker && navigator.serviceWorker.register)
+		{
+			// Register an empty service worker to trigger web app install banners.
+			navigator.serviceWorker.register("sw.js", { scope: "./" });
+		}
     </script>
 </body> 
 </html> 
